# mcp-1c-help

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
src/: db.rs  hbk.rs  index.rs  main.rs  tools.rs
