[package]
name = "mcp-1c-help"
version = "0.1.0"
edition = "2021"
description = "Standalone MCP server for 1C:Enterprise 8.3 platform documentation search"
authors = ["Mini AI 1C"]
license = "MIT"

[[bin]]
name = "mcp-1c-help"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["now"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
scraper = "0.19"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
